syntax = "proto3";
package admin;
service MQTTBrokerAdminService {
    rpc cluster_status(ClusterStatusRequest) returns(ClusterStatusReply){}
}

message ClusterStatusRequest{

}
message ClusterStatusReply{
    string cluster_name = 1;
    repeated string nodes = 2;
}
